--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,4 +1,6 @@
 <h1>Add Your Favourite Pupper</h1>
+<%= link_to("Back to Images", "/images") %>
+
 <%= form_for(@image) do |f| %>
   <p>
     <%= f.label :dog_name %><br>
