--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,4 +1,4 @@
 <h1><%= @image.dog_name %></h1>
 <h2><%= @image.title %></h2>
-<p><%= link_to("Back to Doggos", "/images") %> | <%= link_to("Edit your Pupper", "/images/#{@image.id}/edit")%></p>
+<p><%= link_to("Back to Doggos", "/images") %> | <%= link_to("Edit your Pupper", "/images/#{@image.id}/edit")%> |  <%= link_to("Delete", "/images/#{@image.id}", method: :delete, data: {confirm: "Are you sure you want to delete this picture?"})  %> </p>
 <img src="<%= @image.url %>">
