--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,7 +1,23 @@
 <h1>Images of Dojes</h1>
 <%= link_to("Add a Doggo", "/images/new") %>
 
+<h1>Most Recent Pictures</h1>
+
+<ul>
+  <% @most_recent_pictures.each do |image| %>
+    <li><%= image.title %></li>
+  <% end %>
+</ul>
+
 <% @image.each do |image| %>
+  <h3><%= image.dog_name%></h3>
+  <p><%= image.title %></p>
+  <%= link_to(image_tag(image.url), "/images/#{image.id}") %>
+<% end %>
+
+<h1>Older Pictures</h1>
+
+<% @created_before.each do |image| %>
   <h3><%= image.dog_name%></h3>
   <p><%= image.title %></p>
   <%= link_to(image_tag(image.url), "/images/#{image.id}") %>
