--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -22,3 +22,11 @@
   <p><%= image.title %></p>
   <%= link_to(image_tag(image.url), "/images/#{image.id}") %>
 <% end %>
+
+<h2>2016 Pictures</h2>
+
+<% Image.pictures_created_in_year(2016).each do |image| %>
+  <h3><%= image.dog_name%></h3>
+  <p><%= image.title %></p>
+  <%= link_to(image_tag(image.url), "/images/#{image.id}") %>
+<% end %>
