--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -1,3 +1,60 @@
 // Place all the styles related to the images controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "normalize";
+@import "variables";
+@import "mixins";
+@import "header";
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: $heading-font;
+  line-height: 1.1;
+}
+
+html {
+  box-sizing: inherit;
+  font-family: $content-font;
+  line-height: 1.35;
+  height: 100%;
+}
+header {
+  @include linear-gradient(hotpink, tomato);
+  text-align: center;
+  padding: 1.5em;
+  h1 {
+    margin: 0;
+    padding: 0.5em;
+    font-size: 50px;
+    color: $heading-colour;}
+  .main-nav li{
+    display: inline-block;
+    a {
+      transition: all ease 0.5s;
+      color: $heading-colour;
+      text-decoration: none;}
+    a:hover {
+      font-weight: 700;
+      color: $faded-colour;
+      text-decoration: line-through;
+      font-style: italic;}
+    }
+}
+
+.flex-container{
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  .inner-flex-div{
+    display: inline-block;
+    position: relative;
+    .image-text{
+      position: absolute;
+      top: 115px;
+      color: #fff;
+      width: 97%;
+      background-image: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.7) 100%);
+      height: 125px;
+      padding-left: 10px;
+    }
+  }
+}
