--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -2,3 +2,20 @@
 <h2><%= @image.title %></h2>
 <p><%= link_to("Back to Doggos", "/images") %> | <%= link_to("Edit your Pupper", "/images/#{@image.id}/edit")%> |  <%= link_to("Delete", "/images/#{@image.id}", method: :delete, data: {confirm: "Are you sure you want to delete this picture?"})  %> </p>
 <img src="<%= @image.url %>">
+
+<h2>Tags:</h2>
+<ul>
+  <% @image.tags.each do |tag| %>
+  <li><%= tag.name %></li>
+  <% end %>
+</ul>
+
+<h2>Comments</h2>
+<ul>
+  <% @image.comments.each do |comment| %>
+  <li>
+   <p>On <%= comment.created_at %> <%= comment.name %> says,</p>
+   <p>"<%= comment.body %>"</p>
+   </li>
+  <% end %>
+</ul>
