--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <ul>
       <li><%= link_to("Home", root_url) %></li>
       <li><%= link_to("Add Image", "/images/new") %></li>
+      <li><%= link_to("Sign Up", new_users_url) %></li>
     </ul>
   </nav>
 </header>
